# PortAudio_VoiceRecorder

./: LICENSE
Recorder/: CMakeLists.txt
Recorder/UnitTest/: CMakeLists.txt  main.cpp
Recorder/include/: Device.h  Recorder.h  SourceImpl.h  WAVImpl.h
Recorder/src/: Device.cpp  Recorder.cpp  SourceImpl.cpp  WAVImpl.cpp
portaudio-19.7.0/: CMakeLists.txt
portaudio-19.7.0/lib/: libportaudio.la  libportaudio.so.2
portaudio-19.7.0/lib/pkgconfig/: portaudio-2.0.pc
